Prepare release v1.13.10 and Specification v0.35
Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
-dbus 1.13.10 (UNRELEASED)
+dbus 1.13.10 (2019-05-13)
 =========================
+
+The “engineering brick” release.
 
 Dependencies:
 
