--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
-dbus 1.12.14 (UNRELEASED)
+dbus 1.12.14 (2019-05-17)
 =========================
+
+The “reclaimed floorboards” release.
 
 Enhancements:
 
